base/application/podinfo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-svc
  
spec:
  ports:
  - name: http
    port: 9898
    protocol: TCP
    targetPort: http
  selector:
    app: podinfo
  sessionAffinity: None
  type: ClusterIP
