base/application/podinfo-ing-with-auth.yaml
---
# Adapter les valeurs pour le domaine caas.fr)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ing
  
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #
    # cache > noflood
    nginx.ingress.kubernetes.io/auth-cache-key: "$cookie__oauth2_proxy"
    nginx.ingress.kubernetes.io/auth-cache-duration: '200 202 10m'
    #

    # Adaptez les valeurs ici
    nginx.ingress.kubernetes.io/auth-url: "https://auth.caas.fr/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.caas.fr/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
    # 
    
  labels:
    app: demo-site
    app.kubernetes.io/name: demo-site
spec:
  ingressClassName: nginx
  tls:
  - hosts:
     - demo-site.caas.fr
    secretName: demo-site.caas.fr-tls
  rules:
  - host: demo-site.caas.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo-svc
            port:
              number: 9898
