base/application/podinfo-ing-with-no-auth.yaml
---
# Adapter les valeurs pour le domaine caas.fr)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ing
  
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: demo-site
    app.kubernetes.io/name: demo-site
spec:
  ingressClassName: nginx
  tls:
  - hosts:
     - demo-site.caas.fr
    secretName: demo-site.caas.fr-tls
  rules:
  - host: demo-site.caas.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo-svc
            port:
              number: 9898
